--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "hrequests>=0.9.2",
+    "hrequests[all]>=0.9.2",
     "python-dotenv>=1.1.1",
+    "selectolax>=0.3.32",
+    "supabase>=2.18.0",
 ]
