--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi[all]>=0.116.1",
     "google-genai>=1.29.0",
     "hrequests[all]>=0.9.2",
     "python-dotenv>=1.1.1",
+    "redis[hiredis]>=6.4.0",
     "selectolax>=0.3.32",
     "supabase>=2.18.0",
 ]
