--- a/ui/package.json
+++ b/ui/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.2"
   }
 }
