--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "clean-html-for-llm>=1.3.2",
     "fastapi[all]>=0.116.1",
     "google-genai>=1.29.0",
     "hrequests[all]>=0.9.2",
+    "html-to-markdown>=1.9.0",
+    "openai>=1.101.0",
+    "playwright>=1.54.0",
     "python-dotenv>=1.1.1",
     "redis[hiredis]>=6.4.0",
     "selectolax>=0.3.32",
